--- a/web/index.html
+++ b/web/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>DeSoFi</title>
-    <link href="/main.2e96ded7.css" rel="stylesheet"></head>
+        <title>DeCoFi</title>
+    <link href="/main.c6693e83.css" rel="stylesheet"></head>
     <body>
         <div id="root"></div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
         <script src="https://package.dapphero.io/main.js" id="dh-apiKey" data-api="1582926912005x142783468178767870"></script>
-    <script type="text/javascript" src="/vendors~main.2e96ded734bc9338c765.js"></script><script type="text/javascript" src="/main.2e96ded734bc9338c765.js"></script></body>
+    <script type="text/javascript" src="/vendors~main.c6693e834c00c9fe4373.js"></script><script type="text/javascript" src="/main.c6693e834c00c9fe4373.js"></script></body>
 </html>
